<resources>
    <string name="app_name">Color My Views</string>
    <string name="box_one">Box one</string>
    <string name="box_two">Box two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box four</string>
    <string name="box_five">Box five</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
</resources>
