<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/box_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            app:layout_constraintTop_toTopOf="parent"

            android:fontFamily="@font/roboto_thin" style="@style/WhiteBox"
            app:layout_constraintDimensionRatio="w,1:10"
            android:id="@+id/box_one"

    />
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="129dp"
            android:id="@+id/box_two" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" style="@style/WhiteBox"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/WhiteBox"
            android:id="@+id/box_three"
            app:layout_constraintBottom_toTopOf="@+id/box_four" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@+id/box_two" app:layout_constraintStart_toEndOf="@+id/box_two"
            android:layout_marginStart="16dp" app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/WhiteBox"
            android:id="@+id/box_four"
            app:layout_constraintTop_toBottomOf="@+id/box_three"
            app:layout_constraintBottom_toTopOf="@+id/box_five" app:layout_constraintStart_toEndOf="@+id/box_two"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/WhiteBox"
            android:id="@+id/box_five"
            app:layout_constraintBottom_toBottomOf="@+id/box_two" app:layout_constraintTop_toBottomOf="@+id/box_four"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toEndOf="@+id/box_two"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="How to play:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_how" android:fontFamily="@font/roboto_thin"
            android:textSize="@dimen/box_text_size" app:layout_constraintBaseline_toBaselineOf="@+id/text_info"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="Tap on the white boxs "
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:id="@+id/text_info" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/text_how" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/box_two"
            app:layout_constraintVertical_bias="0.051"/>
    <Button
            android:text="@string/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_button"
            app:layout_constraintStart_toEndOf="@+id/red_button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/green_button"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_info" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintStart_toEndOf="@+id/yellow_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

</android.support.constraint.ConstraintLayout>